--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header
-      class="z-[2] absolute w-full top-0 left-0 lg:px-[5.20833333333vw] lg:pt-[1.61458333333vw] sm:p-[4vw] p-[6vw] pb-[unset] sm:pb-[unset]"
+      class="z-[2] absolute w-full top-0 left-0 lg:px-[5.20833333333vw] lg:py-[1.61458333333vw] sm:p-[4vw] p-[6vw]"
     >
       <div class="flex justify-between items-center">
         <a
