--- a/index.html
+++ b/index.html
@@ -92,9 +92,74 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="lg:w-[82.1354166667vw] mx-[auto] lg:pt-[10.625vw] pt1">
+      <section
+        class="sm:pt-[10.625vw] sm:pt-[10.4166666667vw] pt-[15.3846153846vw]"
+      >
+        <div
+          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] mb-[24px] sm:mb-[3.64583333333vw]"
+        >
           <h2 class="text60 text-[#18181B]">Explore our powerful features</h2>
+        </div>
+        <div
+          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
+        >
+          <div
+            class="w-full sm:h-[75vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+          >
+            <div
+              class="featuresCard w-[35vw] lg:w-[17.5520833333vw] top-0 lg:top-[2.34375vw] left-[18vw] lg:left-[6.97916666667vw] absolute"
+            >
+              <img
+                class="w-full"
+                src="./assets/images/home/pasSS.jpg"
+                alt="password screenshot"
+              />
+            </div>
+            <div
+              class="featuresCard w-[65vw] left-[6vw] lg:w-[29.6875vw] bottom-[6.71875vw] lg:left-[2.55208333333vw] absolute"
+            >
+              <img
+                class="w-full"
+                src="./assets/images/home/fileSS.jpg"
+                alt="files screenshot"
+              />
+            </div>
+            <div
+              class="featuresCard w-[28vw] right-[2vw] lg:w-[12.7604166667vw] top-[4.42708333333vw] lg:left-[24.0104166667vw] absolute"
+            >
+              <img
+                class="w-full"
+                src="./assets/images/home/deviceSS.jpg"
+                alt="device screenshot"
+              />
+            </div>
+          </div>
+          <div
+            class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+          >
+            <div
+              class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
+            >
+              <img
+                src="./assets/images/home/frame206.png"
+                alt="frame"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+              <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
+                <h5 class="text50 mb-[16px] sm:mb-[1.5625vw]">
+                  Secure and private file sharing
+                </h5>
+                <p class="text22">
+                  With features such as advanced encryption, password
+                  protection, screenshot prevention, and document expiry, ensure
+                  your confidential documents are shared the way you need them
+                  to be.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="lg:pt-[13.0208333333vw] pt1">
