--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li
               class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw]"
             >
-              <a href="/support.html">Support</a>
+              <a href="#">Support</a>
               <img
                 src="./assets/images/icons/support.svg"
                 alt="support"
