--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
-    <title>Home</title>
+    <title>terms-and-conditions</title>
   </head>
   <body>
     <header
@@ -55,110 +55,75 @@
       </div>
     </header>
     <main>
-      <section>
-        <div
-          class="w-full relative lg:mt-[7.5vw] sm:mt-[24vw] mt-[20vw] lg:pt-[5.88541666667vw] sm:pt-[10vw] pt-[12vw] lg:pb-[0.72916666666vw] lg:px-[9.79166666667vw] sm:px-[6%] px-[5%]"
-        >
-          <img
-            src="./assets/images/home/hero.jpg"
-            alt="hero"
-            class="absolute top-0 left-0 w-full h-full object-cover flipped"
-          />
+      <section class="bg-[#18181B]">
+        <div class="container1720">
           <div
-            class="relative heroBox bg-[#FFF] lg:w-[32.8645833333vw] border12 lg:py-[3.125vw] sm:py-[6vw] py-[10vw]"
+            class="text-[#FFF] lg:w-[41.5625vw] pt-[35vw] pb-[15vw] sm:pt-[28vw] sm:pb-[15vw] lg:pb-[8.28125vw] lg:pt-[14.4270833333vw]"
           >
-            <div
-              class="mx-[auto] sm:w-[90%] lg:w-[81%] w-[81%] flex flex-col items-start"
-            >
-              <div class="text-[#18181B]">
-                <h1 class="text60">Share confidential files safely</h1>
-                <p class="text22 lg:mt-[1.5625vw] mt1">
-                  Securely transfer, store, and share files while preventing
-                  unauthorized sharing or viewing of your confidential data.
-                </p>
-              </div>
-              <a
-                href=""
-                class="lg:mt-[3.64583333333vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn"
-              >
-                <span> get started </span>
-                <img
-                  src="./assets/images/icons/rightchevron.svg"
-                  alt="rightchevron"
-                  class="lg:w-[0.44442708333vw] sm:w-[1.30208333333vw] w-[2.05128205128vw] flipped"
-                />
-              </a>
-            </div>
+            <h1 class="text60">Terms & Conditions</h1>
           </div>
         </div>
       </section>
-      <section
-        class="sm:pt-[10.625vw] sm:pt-[10.4166666667vw] pt-[15.3846153846vw]"
-      >
+      <section>
         <div
-          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] mb-[24px] sm:mb-[3.64583333333vw]"
+          class="text22 text-[#18181B] lg:pt-[6.51041666667vw] pt1 lg:w-[62.2395833333vw] mx-[auto] sm:w-[87%] w-[87%] flex flex-col sm:gap-y-[2.4166666667vw] gap-y-[6.3846153846vw] lg:gap-y-[1.66666666667vw]"
         >
-          <h2 class="text60 text-[#18181B]">Explore our powerful features</h2>
-        </div>
-        <div
-          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
-        >
-          <div
-            class="w-full sm:h-[75vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
-          >
-            <div
-              class="featuresCard w-[35vw] lg:w-[17.5520833333vw] top-0 lg:top-[2.34375vw] left-[18vw] lg:left-[6.97916666667vw] absolute"
-            >
-              <img
-                class="w-full"
-                src="./assets/images/home/pasSS.jpg"
-                alt="password screenshot"
-              />
-            </div>
-            <div
-              class="featuresCard w-[65vw] left-[6vw] lg:w-[29.6875vw] bottom-[6.71875vw] lg:left-[2.55208333333vw] absolute"
-            >
-              <img
-                class="w-full"
-                src="./assets/images/home/fileSS.jpg"
-                alt="files screenshot"
-              />
-            </div>
-            <div
-              class="featuresCard w-[28vw] right-[2vw] lg:w-[12.7604166667vw] top-[4.42708333333vw] lg:left-[24.0104166667vw] absolute"
-            >
-              <img
-                class="w-full"
-                src="./assets/images/home/deviceSS.jpg"
-                alt="device screenshot"
-              />
-            </div>
+          <p>
+            Welcome to GrandTransfer.io! These terms and conditions outline the
+            rules and regulations for the use of our website.
+          </p>
+          <p>
+            By accessing this website, we assume you accept these terms and
+            conditions. Do not continue to use GrandTransfer.io if you do not
+            agree to all of the terms and conditions stated on this page.
+          </p>
+          <p>
+            The following terminology applies to these Terms and Conditions,
+            Privacy Statement, and Disclaimer Notice and all Agreements:
+            "Client," "You," and "Your" refers to you, the person logging on to
+            this website and compliant with the Company's terms and conditions.
+            "The Company," "Ourselves," "We," "Our," and "Us," refers to our
+            Company. "Party," "Parties," or "Us," refers to both the Client and
+            ourselves. All terms refer to the offer, acceptance, and
+            consideration of payment necessary to undertake the process of our
+            assistance to the Client in the most appropriate manner for the
+            express purpose of meeting the Client's needs in respect of the
+            provision of the Company's stated services, in accordance with and
+            subject to prevailing law. Any use of the above terminology or other
+            words in the singular, plural, capitalization, and/or he/she or
+            they, are taken as interchangeable and therefore as referring to the
+            same.
+          </p>
+          <div>
+            <h6><strong>Cookies:</strong></h6>
+            <p>
+              We employ the use of cookies. By accessing GrandTransfer.io, you
+              agree to use cookies in agreement with the Company Name's Privacy
+              Policy. Most interactive websites use cookies to retrieve user
+              details for each visit. Cookies are used by our website to enable
+              the functionality of certain areas, making it easier for people
+              visiting our website. Some of our affiliate/advertising partners
+              may also use cookies.
+            </p>
           </div>
-          <div
-            class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
-          >
-            <div
-              class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
-            >
-              <img
-                src="./assets/images/home/frame206.png"
-                alt="frame"
-                class="w-full h-full object-cover"
-              />
-            </div>
-            <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
-              <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
-                <h5 class="text50 mb-[16px] sm:mb-[1.5625vw]">
-                  Secure and private file sharing
-                </h5>
-                <p class="text22">
-                  With features such as advanced encryption, password
-                  protection, screenshot prevention, and document expiry, ensure
-                  your confidential documents are shared the way you need them
-                  to be.
-                </p>
-              </div>
-            </div>
+          <div>
+            <h6><strong>License:</strong></h6>
+            <p>
+              Unless otherwise stated, Company Name and/or its licensors own the
+              intellectual property rights for all material on GrandTransfer.io.
+              All intellectual property rights are reserved. You may access this
+              from GrandTransfer.io for your own personal use, subject to
+              restrictions set in these terms and conditions. <br />
+              You must not:
+            </p>
+            <ul class="list-disc lg:px-[1.5vw] sm:px-[4vw] px-[8vw]">
+              <li>Republish material from GrandTransfer.io</li>
+              <li>Sell, rent, or sub-license material from GrandTransfer.io</li>
+              <li>
+                Reproduce, duplicate, or copy material from GrandTransfer.io
+              </li>
+              <li>Redistribute content from GrandTransfer.io</li>
+            </ul>
           </div>
         </div>
       </section>
