--- a/index.html
+++ b/index.html
@@ -2,9 +2,65 @@
 <html lang="en" dir="ltr" class="ltr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1"
+    />
+    <meta name="googlebot" content="noindex" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
-    <title>Home</title>
+    <title>
+      Secure File Sharing - Protect Your Confidential Data Online |
+      GrandTransfer
+    </title>
+    <meta
+      name="title"
+      content="Secure File Sharing - Protect Your Confidential Data Online | GrandTransfer"
+    />
+    <meta
+      name="keywords"
+      content="secure file sharing, confidential file transfer, protected file storage, prevent unauthorized file sharing, online data security, safe file upload, privacy-focused file service"
+    />
+
+    <meta
+      name="description"
+      content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Secure File Sharing - Protect Your Confidential Data Online | GrandTransfer"
+    />
+    <meta
+      property="og:description"
+      content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
+    />
+    <meta property="og:image" content="/assets/images/ogImage.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
+    />
+    <!-- Twitter -->
+    <meta
+      property="twitter:title"
+      content="Secure File Sharing - Protect Your Confidential Data Online | GrandTransfer"
+    />
+    <meta
+      property="twitter:description"
+      content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
+    />
+    <meta property="twitter:image" content="/assets/images/ogImage.jpg" />
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="630" />
+    <meta
+      property="twitter:image:alt"
+      content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
+    />
   </head>
   <body>
     <header
@@ -32,7 +88,7 @@
             <li
               class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw]"
             >
-              <a href="#">Support</a>
+              <a href="https://support.grandautomation.io/login">Support</a>
               <img
                 src="./assets/images/icons/support.svg"
                 alt="support"
@@ -40,7 +96,7 @@
               />
             </li>
             <li class="text-[#992861]">
-              <a href="/">Log in</a>
+              <a href="https://app.grandtransfer.io/login">Log in</a>
             </li>
           </ul>
         </nav>
@@ -78,7 +134,7 @@
                 </p>
               </div>
               <a
-                href=""
+                href="/pricing.html#plans"
                 class="lg:mt-[3.64583333333vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn"
               >
                 <span> get started </span>
@@ -187,7 +243,7 @@
                 </p>
               </div>
               <a
-                href=""
+                href="https://support.grandautomation.io/login"
                 class="lg:mt-[3.125vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn"
               >
                 <span> Support </span>
