--- a/pricing.html
+++ b/pricing.html
@@ -68,22 +68,22 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="plans">
         <div
           class="lg:pt-[6.51041666667vw] pt1 lg:w-[89.6875vw] mx-[auto] sm:w-[87%] w-[87%]"
         >
           <div
-            class="overflow-hidden bg-[#F4F5F7] text25 lg:rounded-[4.16666666667vw] table lg:mx-[auto]"
+            class="overflow-hidden bg-[#F4F5F7] text25 rounded-full lg:rounded-[5.05208333333vw] table mx-[auto]"
           >
             <button
               data-tab-target="#monthly"
-              class="active tab lg:px-[3.125vw] sm:px-[3.90625vw] px-[5.12820512821vw] text-[#161E2E] lg:rounded-[5.05208333333vw]"
+              class="active tab lg:px-[3.125vw] sm:px-[3.90625vw] px-[5.12820512821vw] text-[#161E2E] rounded-full lg:rounded-[5.05208333333vw]"
             >
               <span> Monthly </span>
             </button>
             <button
               data-tab-target="#annually"
-              class="lg:px-[3.125vw] sm:px-[3.90625vw] px-[5.12820512821vw] tab text-[#161E2E] lg:rounded-[5.05208333333vw]"
+              class="lg:px-[3.125vw] sm:px-[3.90625vw] px-[5.12820512821vw] tab text-[#161E2E] rounded-full lg:rounded-[5.05208333333vw]"
             >
               <span> Annually </span>
             </button>
@@ -191,7 +191,7 @@
                       </ul>
                     </div>
                     <a
-                      href=""
+                      href="https://app.grandtransfer.io?wqx=1B5fG7hJ2kL8pZ9qR3sT6uY0vX4wE1"
                       class="lg:mt-[4.16666666667vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn lg:py-[0.78125vw] lg:px-[1.82291666667vw]"
                     >
                       <span class="capitalize"> Start Now </span>
@@ -308,7 +308,7 @@
                       </ul>
                     </div>
                     <a
-                      href=""
+                      href="https://app.grandtransfer.io?wqx=2B5fG7hJ2kL8pZ9qR3sT6uY0vX4wE1"
                       class="lg:mt-[4.16666666667vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn lg:py-[0.78125vw] lg:px-[1.82291666667vw]"
                     >
                       <span class="capitalize"> Start Now </span>
@@ -427,7 +427,7 @@
                       </ul>
                     </div>
                     <a
-                      href=""
+                      href="https://app.grandtransfer.io?wqx=3B5fG7hJ2kL8pZ9qR3sT6uY0vX4wE1"
                       class="lg:mt-[4.16666666667vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn lg:py-[0.78125vw] lg:px-[1.82291666667vw]"
                     >
                       <span class="capitalize"> Start Now </span>
@@ -559,7 +559,7 @@
                       </ul>
                     </div>
                     <a
-                      href=""
+                      href="https://app.grandtransfer.io?wqx=4B5fG7hJ2kL8pZ9qR3sT6uY0vX4wE1"
                       class="lg:mt-[2.1875vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn lg:py-[0.78125vw] lg:px-[1.82291666667vw]"
                     >
                       <span class="capitalize"> Start Now </span>
