--- a/index.html
+++ b/index.html
@@ -61,6 +61,37 @@
       property="twitter:image:alt"
       content="Share confidential files safely with our secure file sharing service. Transfer, store, and share your files securely and prevent unauthorized viewing or sharing of your sensitive data. Trust in our robust privacy controls for your peace of mind."
     />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/assets/images/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="/assets/images/favicons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <header
@@ -77,16 +108,16 @@
           class="flex items-center lg:block lg:h-[unset] h-[100svh] sideBar lg:static absolute top-0 left-0 w-full lg:w-[unset]"
         >
           <ul
-            class="text20 text-[#18181B] flex lg:gap-x-[1.5625vw] lg:flex-row flex-col sm:gap-y-[7vw] gap-y-[6vw] lg:w-[unset] lg:mx-[unset] mx-[auto] w-[90%]"
+            class="text20 text-[#fff] lg:text-[#18181B] flex lg:gap-x-[1.5625vw] lg:flex-row flex-col sm:gap-y-[7vw] gap-y-[6vw] lg:w-[unset] lg:mx-[unset] mx-[auto] w-[90%]"
           >
-            <li>
+            <li class="lg:hover:text-[#992861] transition-all duration-500">
               <a href="/pricing.html">Pricing</a>
             </li>
-            <li>
+            <li class="lg:hover:text-[#992861] transition-all duration-500">
               <a href="/faqs.html">FAQs</a>
             </li>
             <li
-              class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw]"
+              class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw] lg:hover:text-[#992861] transition-all duration-500"
             >
               <a href="https://support.grandautomation.io/login">Support</a>
               <img
@@ -95,7 +126,9 @@
                 class="flipped lg:w-[0.83333333333vw] sm:w-[1.82291666667vw] w-[3.07692307692vw]"
               />
             </li>
-            <li class="text-[#992861]">
+            <li
+              class="text-[#992861] lg:hover:text-[#18181B] transition-all duration-500"
+            >
               <a href="https://app.grandtransfer.io/login">Log in</a>
             </li>
           </ul>
