--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -2,9 +2,93 @@
 <html lang="en" dir="ltr" class="ltr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1"
+    />
+    <meta name="googlebot" content="noindex" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
-    <title>terms-and-conditions</title>
+    <title>Terms & Conditions - User Agreement | GrandTransfer</title>
+    <meta
+      name="title"
+      content="Terms & Conditions - User Agreement | GrandTransfer"
+    />
+    <meta
+      name="keywords"
+      content="GrandTransfer terms, user agreement, service conditions, file sharing terms of use, legal terms, secure file transfer policy, terms and conditions, service usage policy"
+    />
+
+    <meta
+      name="description"
+      content="Review the Terms and Conditions for using GrandTransfer's secure file sharing service. Understand your rights and responsibilities as a user to ensure a smooth and secure file management experience."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Terms & Conditions - User Agreement | GrandTransfer"
+    />
+    <meta
+      property="og:description"
+      content="Review the Terms and Conditions for using GrandTransfer's secure file sharing service. Understand your rights and responsibilities as a user to ensure a smooth and secure file management experience."
+    />
+    <meta property="og:image" content="/assets/images/ogImage.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Review the Terms and Conditions for using GrandTransfer's secure file sharing service. Understand your rights and responsibilities as a user to ensure a smooth and secure file management experience."
+    />
+    <!-- Twitter -->
+    <meta
+      property="twitter:title"
+      content="Terms & Conditions - User Agreement | GrandTransfer"
+    />
+    <meta
+      property="twitter:description"
+      content="Review the Terms and Conditions for using GrandTransfer's secure file sharing service. Understand your rights and responsibilities as a user to ensure a smooth and secure file management experience."
+    />
+    <meta property="twitter:image" content="/assets/images/ogImage.jpg" />
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="630" />
+    <meta
+      property="twitter:image:alt"
+      content="Review the Terms and Conditions for using GrandTransfer's secure file sharing service. Understand your rights and responsibilities as a user to ensure a smooth and secure file management experience."
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/assets/images/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="/assets/images/favicons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <header
@@ -21,26 +105,28 @@
           class="flex items-center lg:block lg:h-[unset] h-[100svh] sideBar lg:static absolute top-0 left-0 w-full lg:w-[unset]"
         >
           <ul
-            class="text20 text-[#18181B] flex lg:gap-x-[1.5625vw] lg:flex-row flex-col sm:gap-y-[7vw] gap-y-[6vw] lg:w-[unset] lg:mx-[unset] mx-[auto] w-[90%]"
+            class="text20 text-[#fff] lg:text-[#18181B] flex lg:gap-x-[1.5625vw] lg:flex-row flex-col sm:gap-y-[7vw] gap-y-[6vw] lg:w-[unset] lg:mx-[unset] mx-[auto] w-[90%]"
           >
-            <li>
+            <li class="lg:hover:text-[#992861] transition-all duration-500">
               <a href="/pricing.html">Pricing</a>
             </li>
-            <li>
+            <li class="text-[#992861] transition-all duration-500">
               <a href="/faqs.html">FAQs</a>
             </li>
             <li
-              class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw]"
+              class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw] lg:hover:text-[#992861] transition-all duration-500"
             >
-              <a href="#">Support</a>
+              <a href="https://support.grandautomation.io/login">Support</a>
               <img
                 src="./assets/images/icons/support.svg"
                 alt="support"
                 class="flipped lg:w-[0.83333333333vw] sm:w-[1.82291666667vw] w-[3.07692307692vw]"
               />
             </li>
-            <li class="text-[#992861]">
-              <a href="/">Log in</a>
+            <li
+              class="text-[#992861] lg:hover:text-[#18181B] transition-all duration-500"
+            >
+              <a href="https://app.grandtransfer.io/login">Log in</a>
             </li>
           </ul>
         </nav>
@@ -152,7 +238,7 @@
                 </p>
               </div>
               <a
-                href=""
+                href="https://support.grandautomation.io/login"
                 class="lg:mt-[3.125vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn"
               >
                 <span> Support </span>
